--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@ buildscript {
     ext.versions = [
             virgil_sdk: '5.0.4-SNAPSHOT',
             kotlin: '1.2.31',
-            junit: '5.2.0'
+            junit: '5.2.0',
+            dokka: '0.9.17'
     ]
 
     repositories {
@@ -11,11 +12,14 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:${versions.dokka}"
     }
 }
 
 plugins {
-    id 'java'
+    id 'java-library'
+    id 'maven-publish'
+    id 'signing'
 }
 
 group 'com.virgilsecurity'
@@ -24,6 +28,7 @@ version '1.0-SNAPSHOT'
 apply plugin: 'kotlin'
 apply plugin: 'org.junit.platform.gradle.plugin'
 apply plugin: 'maven'
+apply plugin: 'org.jetbrains.dokka'
 
 sourceCompatibility = 1.8
 
@@ -60,4 +65,66 @@ junitPlatformTest {
     systemProperty 'API_PRIVATE_KEY', System.getProperty('API_PRIVATE_KEY')
     systemProperty 'API_PUBLIC_KEY', System.getProperty('API_PUBLIC_KEY')
     systemProperty 'API_PUBLIC_KEY_ID', System.getProperty('API_PUBLIC_KEY_ID')
+}
+
+task sourcesJar(type: Jar) {
+    from(sourceSets["main"].allSource)
+    classifier = 'sources'
+}
+
+task javadocJar(type: Jar, dependsOn: 'dokka') {
+    from "$buildDir/javadoc"
+    classifier = 'javadoc'
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifactId = 'keyknox'
+            from components.java
+            artifact sourcesJar
+            artifact javadocJar
+            pom {
+                name = 'Virgil KeyKnox Java/Android SDK'
+                description = 'Virgil Security provides an SDK which allows you to communicate with Virgil Keyknox Service. Virgil Keyknox Service allows users to store their sensitive data (such as Private Key) encrypted (with end-to-end encryption) for using and sharing it between different devices.'
+                url = 'https://www.virgilsecurity.com/'
+                licenses {
+                    license {
+                        name = 'Virgil Security, Inc. license'
+                        url = 'https://github.com/VirgilSecurity/keyknox-kotlin/blob/master/LICENSE.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'andrii-iakovenko'
+                        name = 'Andrii Iakovenko'
+                        email = 'andrii-iakovenko@gmail.com'
+                        organizationUrl = 'https://github.com/andrii-iakovenko'
+                    }
+                }
+                scm {
+                    connection = 'scm:git:https://github.com/VirgilSecurity/keyknox-kotlin.git'
+                    developerConnection = 'scm:git:git@github.com:VirgilSecurity/keyknox-kotlin.git'
+                    url = 'https://github.com/VirgilSecurity/keyknox-kotlin'
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+        }
+    }
+}
+
+signing {
+    sign publishing.publications.mavenJava
+}
+
+dokka {
+    outputFormat = 'html' 
+    outputDirectory = "$buildDir/javadoc"
+    reportUndocumented = false
 }
