--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext.versions = [
-            virgil_sdk: '5.0.4-SNAPSHOT',
+            virgil_sdk: '5.0.4',
             kotlin: '1.2.31',
             junit: '5.2.0',
             dokka: '0.9.17'
@@ -23,7 +23,7 @@ plugins {
 }
 
 group 'com.virgilsecurity'
-version '1.0-SNAPSHOT'
+version '0.1.0'
 
 apply plugin: 'kotlin'
 apply plugin: 'org.junit.platform.gradle.plugin'
