--- a/build.gradle
+++ b/build.gradle
@@ -41,11 +41,9 @@ repositories {
 dependencies {
     // Virgil
     compile "com.virgilsecurity.sdk:crypto:${versions.virgil_sdk}"
-//    compile "com.virgilsecurity.sdk:crypto-android:${versions.virgil_sdk}@aar"
     compile "com.virgilsecurity.sdk:sdk:${versions.virgil_sdk}"
 
-    // https://mvnrepository.com/artifact/com.beust/klaxon
-    compile group: 'com.beust', name: 'klaxon', version: '3.0.5'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}"
 
