--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext.versions = [
             virgil_sdk: '5.0.4',
-            kotlin: '1.2.31',
+            kotlin: '1.3.0-rc-190',
             junit: '5.2.0',
             dokka: '0.9.17'
     ]
@@ -114,8 +114,8 @@ publishing {
             def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots"
             url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
             credentials {
-                username "${authentication_username}"
-                password "${authentication_password}"
+//                username "${authentication_username}"
+//                password "${authentication_password}"
             }
         }
     }
