--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext.versions = [
-            virgil_sdk: '5.0.4',
+            virgil_sdk: '5.0.6',
             kotlin: '1.3.0-rc-190',
             junit: '5.2.0',
             dokka: '0.9.17'
@@ -23,7 +23,7 @@ plugins {
 }
 
 group 'com.virgilsecurity'
-version '0.1.1'
+version '0.1.2'
 
 apply plugin: 'kotlin'
 apply plugin: 'org.junit.platform.gradle.plugin'
@@ -51,6 +51,26 @@ dependencies {
     testRuntime("org.junit.jupiter:junit-jupiter-engine:${versions.junit}")
 }
 
+task generateVersionVirgilAgent {
+    outputs.dir "$buildDir/generated"
+    doFirst {
+        def versionFile = file("$buildDir/generated/com/virgilsecurity/passw0rd/build/VersionVirgilAgent.kt")
+        versionFile.parentFile.mkdirs()
+        versionFile.text =
+                """
+package com.virgilsecurity.passw0rd.build;
+
+object VersionVirgilAgent {
+    const val VERSION = "$project.version"
+}
+"""
+    }
+}
+
+sourceSets.main.java.srcDirs = ["${buildDir}/generated/", "src/main/kotlin"]
+
+compileKotlin.dependsOn(generateVersionVirgilAgent)
+
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
@@ -65,7 +85,6 @@ def API_PUBLIC_KEY_ID = hasProperty('API_PUBLIC_KEY_ID') ? API_PUBLIC_KEY_ID : S
 
 junitPlatformTest {
     systemProperty 'APP_ID', APP_ID
-    System.println("VALUE IS: " + APP_ID)
     systemProperty 'API_PRIVATE_KEY', API_PRIVATE_KEY
     systemProperty 'API_PUBLIC_KEY', API_PUBLIC_KEY
     systemProperty 'API_PUBLIC_KEY_ID', API_PUBLIC_KEY_ID
