--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,7 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+# Project-specific
+testsDev.sh
+testsStg.sh
+testsProd.sh
