--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@
 
 buildscript {
     ext.versions = [
-            virgil_sdk: '5.0.8',
+            virgil_sdk: '5.1.0-SNAPSHOT',
             kotlin: '1.3.0-rc-190',
             junit: '5.2.0',
             dokka: '0.9.17'
@@ -56,7 +56,7 @@ plugins {
 }
 
 group 'com.virgilsecurity'
-version '0.1.2'
+version '0.1.3-SNAPSHOT'
 
 apply plugin: 'kotlin'
 apply plugin: 'org.junit.platform.gradle.plugin'
@@ -73,8 +73,8 @@ repositories {
 
 dependencies {
     // Virgil
-    compile "com.virgilsecurity.sdk:crypto:${versions.virgil_sdk}"
-    compile "com.virgilsecurity.sdk:sdk:${versions.virgil_sdk}"
+    compile "com.virgilsecurity.sdk:crypto:$versions.virgil_sdk"
+    compile "com.virgilsecurity.sdk:sdk:$versions.virgil_sdk"
 
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 
