--- a/build.gradle
+++ b/build.gradle
@@ -73,14 +73,14 @@ repositories {
 
 dependencies {
     // Virgil
-    compile "com.virgilsecurity.sdk:crypto:$versions.virgil_sdk"
-    compile "com.virgilsecurity.sdk:sdk:$versions.virgil_sdk"
+    implementation "com.virgilsecurity.sdk:crypto:$versions.virgil_sdk"
+    implementation "com.virgilsecurity.sdk:sdk:$versions.virgil_sdk"
 
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}"
 
-    testCompile "org.junit.jupiter:junit-jupiter-api:${versions.junit}"
+    testimplementation "org.junit.jupiter:junit-jupiter-api:${versions.junit}"
     testRuntime("org.junit.jupiter:junit-jupiter-engine:${versions.junit}")
 }
 
