--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ plugins {
 }
 
 group 'com.virgilsecurity'
-version '0.1.3-SNAPSHOT'
+version '0.2.0-alpha-SNAPSHOT'
 
 apply plugin: 'kotlin'
 apply plugin: 'org.junit.platform.gradle.plugin'
@@ -68,7 +68,9 @@ sourceCompatibility = 1.8
 repositories {
     jcenter()
     mavenCentral()
-    mavenLocal()
+    maven {
+        url = "https://oss.sonatype.org/content/repositories/snapshots"
+    }
 }
 
 dependencies {
@@ -80,7 +82,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}"
 
-    testimplementation "org.junit.jupiter:junit-jupiter-api:${versions.junit}"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${versions.junit}"
     testRuntime("org.junit.jupiter:junit-jupiter-engine:${versions.junit}")
 }
 
